--- a/cart/Makefile
+++ b/cart/Makefile
@@ -1,3 +1,3 @@
 build:
-	g++ -std=c++0x main.cc stats.cc tree_node.cc matrix.cc -o main
-	./main ../data/ex00.txt ../data/result.txt
+	g++ -pthread -std=c++0x main.cc matrix.cc tree_node.cc stats.cc forest.cc parallel_forest.cc pthread_pool.cc -o main
+	time ./main ../data/ex00.txt ../data/result.txt
