--- a/gbrt/Makefile
+++ b/gbrt/Makefile
@@ -3,7 +3,7 @@ export CXX = g++
 export CFLAGS = -Wall -O3 -msse2
 
 # specify tensor path
-BIN = 
+BIN = gboost
 OBJ = gboost.o
 .PHONY: clean all
 
@@ -11,11 +11,12 @@ all: $(BIN) $(OBJ)
 export LDFLAGS= -pthread -lm
 
 gboost.o: booster/*.cc
+gboost: regression/gboost_reg_main.cc gboost.o
 
 $(BIN) :
-	   $(CXX) $(CFLAGS) $(LDFLAGS) -o $@ $(filter %.cc %.o %.c, $^)
+	   $(CXX) $(CFLAGS) $(LDFLAGS) -o $@ $(filter %.cc %.o %.c, $^) -I ./
 $(OBJ) :
-	   $(CXX) -c $(CFLAGS) -o $@ $(firstword $(filter %.cc %.c, $^) )
+	   $(CXX) -c $(CFLAGS) -o $@ $(firstword $(filter %.cc %.c, $^) ) -I ./
 install:
 	   cp -f -r $(BIN) $(INSTALL_PATH)
 clean:
