--- a/gradient_boosting/demo/regression/reg.conf
+++ b/gradient_boosting/demo/regression/reg.conf
@@ -2,15 +2,15 @@ boost_iterations=10
 
 save_period=0
 
-train_path=C:\cygwin64\home\Chen\GitHub\xgboost\demo\regression\train.txt
-					
-model_dir_path=C:\cygwin64\home\Chen\GitHub\xgboost\demo\regression\model
+train_path=/Users/letfly/Python/decision-tree/data/gb_train.csv
 
-validation_paths=C:\cygwin64\home\Chen\GitHub\xgboost\demo\regression\validation.txt
+model_dir_path=/Users/letfly/Python/decision-tree/demo/regression/model
+
+validation_paths=/Users/letfly/Python/decision-tree/demo/regression/validation.txt
 
 validation_names=validation
 
-test_paths=C:\cygwin64\home\Chen\GitHub\xgboost\demo\regression\test.txt
+test_paths=/Users/letfly/Python/decision-tree/demo/regression/test.txt
 
 test_names=test
 
@@ -21,15 +21,15 @@ do_reboost=0
 bst:num_feature=3
 
 learning_rate=0.01
-                
+
 min_child_weight=1
-                
+
 min_split_loss=0.1
-                
-max_depth=3           
-                
+
+max_depth=3
+
 reg_lambda=0.1
 
 subsample=1
-                
+
 use_layerwise=0
