--- a/cart/Makefile
+++ b/cart/Makefile
@@ -1,3 +1,3 @@
 build:
 	g++ -std=c++0x main.cc stats.cc tree_node.cc matrix.cc -o main
-	./main ../data/ex00.csv ../data/result.csv
+	./main ../data/09_train.csv ../data/result.csv
