--- a/gradient_boosting/Makefile
+++ b/gradient_boosting/Makefile
@@ -1,3 +1,3 @@
 build:
-	g++ -Wall -O3 -msse2 regression/gboost_reg_main.cc -o main -I ./
+	g++ -Wall -O3 -msse2 regression/main.cc -o main -I ./
 	time ./main ../demo/regression/reg.conf
