--- a/gradient_boosting/examples/reg.conf
+++ b/gradient_boosting/examples/reg.conf
@@ -1,4 +1,5 @@
-# General Parameters, see comment for each definition
+#max_depth,num_round,min_child_weight,eta
+# Learner Parameters
 # choose the tree booster
 booster = gbtree
 # This is the only difference with classification, use reg:linear to do linear classification
@@ -21,8 +22,8 @@ num_round = 2
 # 0 means do not save any model except the final round model
 save_period = 0 
 # the path of train data
-train_path = "train_reg.txt" 
+train_path = "examples/train_reg.txt" 
 # the path of validation data, used to monitor training process, here [test] sets name of the validation set
-eval[test] = "test_reg.txt" 
+eval[test] = "examples/test_reg.txt" 
 # the path of test data 
-test_path = "test_reg.txt"      
+test_path = "examples/test_reg.txt"      
