--- a/gradient_boosting/examples/reg.conf
+++ b/gradient_boosting/examples/reg.conf
@@ -1,7 +1,7 @@
 #max_depth,num_round,min_child_weight,eta
 # Learner Parameters
 # choose the linear booster
-booster = gblinear
+booster = gbtree
 # This is the only difference with classification, use reg:linear to do linear classification
 # when labels are in [0,1] we can also use reg:logistic
 objective = reg:linear
